--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,94 @@
 ################################################################################
 
 /bin
-/.vs/ProjectEvaluation
-/.vs/TestProject1/v17
+
+obj/F2.csproj.nuget.dgspec.json
+obj/F2.csproj.nuget.g.props
+obj/F2.csproj.nuget.g.targets
+obj/project.assets.json
+obj/project.nuget.cache
+obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+obj/Debug/F2.1.0.0.nuspec
+obj/Debug/F2.csproj.CoreCompileInputs.cache
+obj/Debug/F2.csproj.FileListAbsolute.txt
+obj/Debug/F2.dll
+obj/Debug/F2.pdb
+obj/Debug/net4.8/.NETFramework,Version=v4.8.AssemblyAttributes.cs
+obj/Debug/net4.8/F2.AssemblyInfo.cs
+obj/Debug/net4.8/F2.AssemblyInfoInputs.cache
+obj/Debug/net4.8/F2.assets.cache
+obj/Debug/net4.8/F2.csproj.AssemblyReference.cache
+obj/Debug/net4.8/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+obj/Debug/net6.0/F2.AssemblyInfo.cs
+obj/Debug/net6.0/F2.AssemblyInfoInputs.cache
+obj/Debug/net6.0/F2.assets.cache
+obj/Debug/net6.0/F2.csproj.AssemblyReference.cache
+obj/Debug/net6.0/F2.csproj.BuildWithSkipAnalyzers
+obj/Debug/net6.0/F2.csproj.CoreCompileInputs.cache
+obj/Debug/net6.0/F2.csproj.FileListAbsolute.txt
+obj/Debug/net6.0/F2.dll
+obj/Debug/net6.0/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net6.0/F2.pdb
+obj/Debug/net6.0/ref/F2.dll
+obj/Debug/net6.0/refint/F2.dll
+obj/Debug/netstandard2.0/.NETStandard,Version=v2.0.AssemblyAttributes.cs
+obj/Debug/netstandard2.0/F2.AssemblyInfo.cs
+obj/Debug/netstandard2.0/F2.AssemblyInfoInputs.cache
+obj/Debug/netstandard2.0/F2.assets.cache
+obj/Debug/netstandard2.0/F2.csproj.AssemblyReference.cache
+obj/Debug/netstandard2.0/F2.csproj.BuildWithSkipAnalyzers
+obj/Debug/netstandard2.0/F2.csproj.CoreCompileInputs.cache
+obj/Debug/netstandard2.0/F2.csproj.FileListAbsolute.txt
+obj/Debug/netstandard2.0/F2.dll
+obj/Debug/netstandard2.0/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/netstandard2.0/F2.pdb
+obj/Debug/netstandard2.1/.NETStandard,Version=v2.1.AssemblyAttributes.cs
+obj/Debug/netstandard2.1/F2.AssemblyInfo.cs
+obj/Debug/netstandard2.1/F2.AssemblyInfoInputs.cache
+obj/Debug/netstandard2.1/F2.assets.cache
+obj/Debug/netstandard2.1/F2.csproj.AssemblyReference.cache
+obj/Debug/netstandard2.1/F2.csproj.CoreCompileInputs.cache
+obj/Debug/netstandard2.1/F2.csproj.FileListAbsolute.txt
+obj/Debug/netstandard2.1/F2.dll
+obj/Debug/netstandard2.1/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/netstandard2.1/F2.pdb
+obj/Release/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+obj/Release/net6.0/F2.AssemblyInfo.cs
+obj/Release/net6.0/F2.AssemblyInfoInputs.cache
+obj/Release/net6.0/F2.assets.cache
+obj/Release/net6.0/F2.csproj.AssemblyReference.cache
+obj/Release/net6.0/F2.csproj.CoreCompileInputs.cache
+obj/Release/net6.0/F2.csproj.FileListAbsolute.txt
+obj/Release/net6.0/F2.dll
+obj/Release/net6.0/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Release/net6.0/F2.pdb
+obj/Release/net6.0/PublishOutputs.7387e9fdc8.txt
+obj/Release/net6.0/ref/F2.dll
+obj/Release/net6.0/refint/F2.dll
+obj/Release/netstandard2.0/.NETStandard,Version=v2.0.AssemblyAttributes.cs
+obj/Release/netstandard2.0/F2.AssemblyInfo.cs
+obj/Release/netstandard2.0/F2.AssemblyInfoInputs.cache
+obj/Release/netstandard2.0/F2.assets.cache
+obj/Release/netstandard2.0/F2.csproj.AssemblyReference.cache
+obj/Release/netstandard2.0/F2.csproj.CoreCompileInputs.cache
+obj/Release/netstandard2.0/F2.csproj.FileListAbsolute.txt
+obj/Release/netstandard2.0/F2.dll
+obj/Release/netstandard2.0/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Release/netstandard2.0/F2.pdb
+obj/Release/netstandard2.0/PublishOutputs.7387e9fdc8.txt
+obj/Release/netstandard2.1/.NETStandard,Version=v2.1.AssemblyAttributes.cs
+obj/Release/netstandard2.1/F2.AssemblyInfo.cs
+obj/Release/netstandard2.1/F2.AssemblyInfoInputs.cache
+obj/Release/netstandard2.1/F2.assets.cache
+obj/Release/netstandard2.1/F2.csproj.AssemblyReference.cache
+obj/Release/netstandard2.1/F2.csproj.CoreCompileInputs.cache
+obj/Release/netstandard2.1/F2.csproj.FileListAbsolute.txt
+obj/Release/netstandard2.1/F2.dll
+obj/Release/netstandard2.1/F2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Release/netstandard2.1/F2.pdb
+obj/Release/netstandard2.1/PublishOutputs.7387e9fdc8.txt
+Properties/PublishProfiles/FolderProfile.pubxml
+Properties/PublishProfiles/FolderProfile.pubxml.user
+.vs/ProjectEvaluation/f2.metadata.v5.2
+.vs/ProjectEvaluation/f2.projects.v5.2
